force-app/main/default/objects/School_Name__c/School_Name__c.object-meta.xml
<CustomObject>
    <label>School Name</label>
    <nameField>
        <displayFormat>ES-{00}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>School Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>