force-app/main/default/objects/School_Name__c/fields/Awards__c.field-meta.xml
<CustomField>
    <fullName>Awards__c</fullName>
    <label>Awards</label>
    <length>25</length>
    <type>Text</type>
</CustomField>