force-app/main/default/objects/School_Name__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>School Contact details</description>
    <label>Contact</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>