force-app/main/default/objects/School_Name__c/fields/Established_On__c.field-meta.xml
<CustomField>
    <fullName>Established_On__c</fullName>
    <description>Established date</description>
    <label>Established On</label>
    <type>Date</type>
</CustomField>