force-app/main/default/objects/School_Name__c/fields/Principal_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_Name__c</fullName>
    <label>Principal Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>