force-app/main/default/objects/School_Name__c/fields/School_Address__c.field-meta.xml
<CustomField>
    <fullName>School_Address__c</fullName>
    <description>Please enter school address</description>
    <label>School Address</label>
    <type>TextArea</type>
</CustomField>