force-app/main/default/objects/School_Name__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>This captures school Name</description>
    <inlineHelpText>Enter School Name</inlineHelpText>
    <label>School Name</label>
    <type>Phone</type>
</CustomField>