force-app/main/default/objects/School_Name__c/fields/School_Website__c.field-meta.xml
<CustomField>
    <fullName>School_Website__c</fullName>
    <label>School Website</label>
    <type>Url</type>
</CustomField>